dashboard/assets/responsive-sidebar.css
::-webkit-scrollbar {
  width: 6px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f8f9fa; 
}
 
/* Handle */
::-webkit-scrollbar-thumb {
  background: rgba(20,33,61,.32); 
  border-radius: 3px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgba(20,33,61,.5); 
}

h2, h3, h4, h5 {
  font-variant: small-caps;
}

button {
  text-transform: uppercase;
}

.tabs {
  color: rgba(50,50,50,1);
  font-weight: 600;
  font-variant: small-caps
}

.tabs:hover {
  color: rgba(23,162,184,1);
  font-weight: 600;
  /* background-color: rgba(23,162,184,0.2); */
}

.active {
  color: rgba(23,162,184,1);
  font-weight: 600;
  /* background-color: rgba(23,162,184,0.2); */
}


#rb-scenario
  .custom-control-input:checked
  ~ .custom-control-label::before {
  background-color: rgba(23,162,184,1);
  border-color: rgba(23,162,184,1);
}

#eto-input
  .custom-control-input:checked
  ~ .custom-control-label::before {
  background-color: rgba(23,162,184,1);
  border-color: rgba(23,162,184,1);
}

#sidebar {
  text-align: left;
  padding: 0rem 0rem;
  background-color: #f8f9fa;
}

#map {
  padding: 0rem 0rem;
  box-shadow: 0 -1px 0 0 rgba(20,33,61,.2);
}

#sidebar h2 {
  text-align: left;
  margin-bottom: 0;
}

/* Hide the blurb on a small screen */
/* #blurb { */
  /* display: none; */
/* } */

#sidebar-toggle {
  display: none;
}

/* #collapse *:first-child { */
  /* margin-top: 1rem; */
/* } */

.mr-1 {
  box-shadow: 0 -1px 1px 0 rgba(20,33,61,.08), 0 2px 6px 0 rgba(20,33,61,.24);
}

/* add the three horizontal bars icon for the toggle */
.navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

#page-content {
  padding: 0rem 0rem;
  /* background-color: #f8f9fa; */
}

#results-container {
  padding: 0rem 0rem;
  /* display: inline-block; */
  background-color: #f8f9fa;
  box-shadow: 0 -1px 0 0 rgba(20,33,61,.2);
}

#tabs {
  position: relative;
  flex: 0 1 auto;
  margin: 0;
  padding: 0rem 0rem;
  box-shadow: inset 0 -1px 0 0 rgba(20,33,61,.2);
  transition: margin 0.3s ease-in-out, padding 0.3s ease-in-out;
}

.footer {
  position: relative;
  z-index: 100;
  flex: 0 1 auto;
  padding: 1rem 1rem;
  margin: 0;
  box-shadow: 0 -1px 0 0 rgba(20,33,61,.2);
  transition: margin 0.3s ease-in-out, padding 0.3s ease-in-out;
}

#sidebar-header {
  position: relative;
  text-align: left;
  flex: 0 1 auto;
  margin: 0;
  padding: 1rem 0rem 0rem 0rem;
  transition: margin 0.3s ease-in-out, padding 0.3s ease-in-out;
}

#tools, #visual-tools {
  position: relative;
  text-align: left;
  flex: 1 1 auto;
  padding: 1rem 0rem;
  transition: margin 0.3s ease-in-out, padding 0.3s ease-in-out;
}

.options {
  padding: 0rem 1rem;
  font-size: 1rem;
}

#results-header {
  position: relative;
  text-align: left;
  flex: 0 1 auto;
  margin: 0;
  padding: 1rem 1rem;
  box-shadow: inset 0 -1px 0 0 rgba(20,33,61,.2);
}

#graphs-container {
    position: relative;
    text-align: left;
	flex: 1 1 auto;
	padding: 1rem 0rem 1rem 1rem;
}

@media (min-width: 48em) {    
  #graphs-container {
    position: relative;
	overflow: auto;
  }

  #map {
    position: relative;
	left: 0;
	top: 0;
  }
  
  #sidebar {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
	height: 100%;
	display: flex;
	flex-flow: column;
	z-index: 100;
    width: 20rem;
	box-shadow: 0 16px 4px rgba(20,33,61,.08);
    text-align: left;
    transition: margin 0.3s ease-in-out, padding 0.3s ease-in-out;
  }

  #sidebar-toggle {
    display: inline-block;
    position: relative;
    top: 0;
    transition: top 0.3s ease-in-out;
  }

  /* add negative margin to sidebar to achieve the collapse */
  #sidebar.collapsed {
    margin-left: -16.5rem;
    padding-right: 0.5rem;
  }

  /* move the sidebar toggle up to the top left corner */
  #sidebar.collapsed #sidebar-toggle {
    top: -1.5rem;
	right: -1rem;
  }

  /* also adjust margin of page content */
  #sidebar.collapsed ~ #page-content {
    margin-left: 3.5rem;
  }

  /* move all contents of navbar other than header (containing toggle) further
     off-screen */
  #sidebar.collapsed > *:not(:first-child) {
    margin-left: -6rem;
    margin-right: 6rem;
  }
  

  /* reveal the blurb on a large screen */
  #blurb {
    display: block;
  }

  /* Hide the toggle on a large screen */
  #navbar-toggle {
    display: none;
  }

  #collapse {
    display: block;
	overflow: auto;
  }

  /* set margins of the main content so that it doesn't overlap the sidebar */
  #page-content {
	height: 100vh;
    margin-left: 20rem;
    margin-right: 0rem;
	display: flex;
	flex-flow: row;
    transition: margin-left 0.3s ease-in-out;
  }
  
  #map {
	position: sticky;
	left: 0;
    height: 100vh;
  }
  
  #results-container {
	position: sticky;
	top: 0;
	left: 0;
	display: flex;
	flex-flow: column;
	height: 100%;
	z-index: 100;
	box-shadow: 0 0 16px 4px rgba(20,33,61,.08);
	overflow: auto;
  }
}

